# tflite-demo

./: CMakeLists.txt
src/: main.cpp  tflite.cpp  tflite.hpp
